assets/css/style.css
/* ... */
:root {
  /************************************/
  /* Bootstrap properties overrides */
  --bs-body-font-family: var(--font-body);
  --bs-body-line-height: 1.7;
}

/* * {
  outline: RED 1px solid;
} */

/************************************/
/* 3. BASE STYLES */
/************************************/
h1,
h2,
h3,
h4,
h5 {
  color: var(--artem-blue-2);
}

video {
  display: block;
}

/************************************/
/* 4. TYPOGRAPHY */
/************************************/
.fs-sm {
  font-size: 14px;
}

/************************************/
/* 5. COMPONENTS */
/************************************/

/************************************/
/* Custom components */
.btn-artem-orange {
  color: var(--bs-white);
  background-color: var(--artem-orange);
  border-color: var(--artem-orange);
}

@media (hover: hover) {
  .btn-artem-orange:hover {
    color: var(--bs-white);
    background-color: hsl(
      var(--artem-orange-hue),
      var(--artem-orange-saturation),
      calc(var(--artem-orange-lightness) - 10%)
    );
    border-color: hsl(
      var(--artem-orange-hue),
      var(--artem-orange-saturation),
      calc(var(--artem-orange-lightness) - 10%)
    );
  }
}

.btn-artem-orange:active {
  color: var(--bs-white) !important;
  background-color: hsl(
    var(--artem-orange-hue),
    var(--artem-orange-saturation),
    calc(var(--artem-orange-lightness) - 20%)
  ) !important;
  border-color: hsl(
    var(--artem-orange-hue),
    var(--artem-orange-saturation),
    calc(var(--artem-orange-lightness) - 20%)
  ) !important;
}

.btn-animated {
  position: relative;
  border: none;
  padding: 1rem 2rem;
  font-size: 1.25rem;
  overflow: hidden;
  line-height: 1;
}

.static-layer,
.dynamic-layer {
  display: flex;
  align-items: center;
  gap: 5px;
}

.static-layer {
  position: relative;
  z-index: 10;
  transition: 0.4s ease;
}

.dynamic-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 30;
  transform: translateY(50%);
  opacity: 0;
  transition: 0.4s ease;
}

.overlay {
  position: absolute;
  display: block;
  background-color: var(--bs-white);
  width: 0;
  height: 100%;
  top: 0;
  left: 0;
  transition: 0.6s ease;
}

.btn-animated:hover .static-layer {
  transform: translateY(-50%);
  opacity: 0;
}

.btn-animated:hover .overlay {
  width: 100%;
}

.btn-animated:hover .dynamic-layer {
  transform: translateY(0);
  opacity: 1;
}

.btn-animated-blue {
  background-color: var(--artem-blue);
}

.btn-animated .static-layer {
  color: var(--bs-white);
}

.btn-animated .dynamic-layer {
  color: var(--artem-dark-blue);
}

.btn-animated-white {
  border: 1px solid var(--bs-white);
  background-color: transparent;
}

.btn-animated-blue-outline {
  border: 1px solid var(--artem-blue);
  background-color: transparent;
}

.btn-animated-blue-outline .static-layer {
  color: var(--artem-blue);
}

.btn-animated-blue-outline .overlay {
  background-color: var(--artem-blue);
}

.btn-animated-blue-outline .dynamic-layer {
  color: var(--bs-white);
}

.btn-circle {
  padding: 0;
  height: 5rem;
  width: 5rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Marquee */
.marquee {
  padding: 2rem 0;
  width: 100%;
  overflow: hidden;
}

.marquee-content {
  display: flex;
  gap: 5rem;
  animation: move-rtl 26000ms linear infinite;
}

.marquee-emblem {
  width: 2rem;
}

.marquee-text {
  width: 7rem;
}

@keyframes move-rtl {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(calc(-100%));
  }
}

/**************************************/
/* Bootstrap components overrides */
.btn-primary {
  background-color: var(--artem-blue);
  border-color: var(--artem-blue);
}

.btn-link {
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-size: 1.125rem;
  color: var(--artem-blue);
}

.btn-link:hover,
.btn-link:active {
  color: var(--bs-white);
}

.btn-link-job {
  color: var(--artem-blue);
  font-weight: 600;
}

.btn-link-job:hover,
.btn-link-job:active {
  color: var(--artem-dark-blue-2);
}

.container-sm {
  max-width: 576px;
}

.container-md {
  max-width: 768px;
}

.container-lg {
  max-width: 992px;
}

.container-xl {
  max-width: 1200px;
}

.container-xxl {
  max-width: 1400px;
}

/************************************/
/* 6. HEADER */
/************************************/

/************************************/
/* Header mobile */
.header-mobile {
  padding: 1rem 0;
  background-color: var(--artem-dark-blue);
  overflow: hidden;
}

.mobile-nav {
}

.mobile-nav-brand {
}

.mobile-nav-brand-logo {
  display: inline-block;
  width: 6.25rem;
}

.mobile-nav-list-backdrop {
  display: block;
  position: fixed;
  top: 0;
  left: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  width: 100%;
  height: 100dvh;
  z-index: 50;
  transition: 1s all;
}

.mobile-nav-list-wrapper {
  display: block;
  position: fixed;
  top: 0;
  left: 100%;
  width: 100%;
  min-height: 100dvh;
  z-index: 100;
  transition: 0.5s all;
}

.mobile-nav-list {
  list-style: none;
  margin: 0;
  padding: 0;
  width: 82%;
  max-width: 20rem;
  margin-left: auto;
  background-color: var(--bs-white);
  height: 100dvh;
  overflow-y: scroll;
}

.mobile-nav-list::-webkit-scrollbar {
  width: 0;
}

.mobile-nav-item {
  border-bottom: 1px solid var(--bs-gray-300);
}

.mobile-nav-link:link,
.mobile-nav-link:visited {
  display: block;
  text-decoration: none;
  color: inherit;
  padding: 1rem 2rem;
}

.mobile-nav-link:hover,
.mobile-nav-link:active {
}

.mobile-nav-link.active {
  color: var(--artem-blue);
}

/* Mobile nav dropdown list */
.mobile-nav-dropdown-list {
  list-style: none;
}

.mobile-nav-dropdown-item {
}

/* Navbar open button */
.mobile-nav-open-btn {
  border: none;
  outline: none;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* ... */

